--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
         <script src="script.js" type="module"></script>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <title>Dough's Lab</title>
+        <link rel="shortcut icon" type="image/png" href="Favicon.png" />
     </head>
 
     <body>
@@ -14,24 +16,62 @@
             <div class="link-container">
                 <a class="link" href="https://evanczako.github.io/DoughLoops/">
                     <img id="dough-loops" src="DoughLoops2.png" alt="Make drum beats!">
+                    <div class="link-desc">
+                        A dynamic and interactive drum machine built entirely using JavaScript, HTML, and CSS!
+                    </div>
                 </a>
-                <div class="link-desc">
-                    DoughLoops - blahblahBLAH! Wow! So much text
-                    for no reason!!
-                </div>
+  
             </div>
             <div class="link-container">
-                <!-- <a class="link" href="https://evanczako.github.io/DoughLoops/">
-                    <img id="dough-loops" src="DoughLoops2.png" alt="Make drum beats!">
-                </a> -->
-                <div class="link-desc">
-                    Sumn - blahblahBLAH!
-                </div>
+                <a class="link" href="https://evanczako.github.io/DoughLoops/">
+                    <img id="chord-finder" src="ChordFinder.png" alt="Identify harmonies!">
+                    <div class="link-desc">
+                        A keyboard visualizer to help you put a name to any chord you play!
+                    </div>
+                </a>
+            </div>
+            <div class="link-container">
+                <a class="link" href="https://open.spotify.com/artist/68GBBhx96KrDxce6eT0Tzz?si=QWdVMabzQEKfAJj8VPC-Ww" target="_blank">
+                    <div id="spotify-link">DOUGH BOI</div>
+                    <div class="link-desc">
+                        <br>
+                        A link to my Spotify, where you can check out my published music! Also on other streaming platforms.
+                    </div>
+                </a>
             </div>
         </div>
         <div id="socials-container">
-            <i class="fa fa-github"></i>
-            <i class="fa fa-linkedin"></i>
+            <div id="self-desc">
+                Welcome! I'm Evan Czako, a software engineer who enjoys
+                creating projects to improve music education through technology.
+                <br>
+                <br>
+                As a composer myself, I try to create tools that enable beginner 
+                and experienced musicians to create and explore new ideas.
+                Click on the projects to the left to try them out for yourself!
+                <br>
+                <br>
+                While the projects currently displayed here are single-page applications
+                created primarily with Javascript, HTML, and CSS, I am also proficient in 
+                fullstack development using tools such as React, Redux, and Ruby on Rails.
+                I am a graduate of both App Academy and Cornell University's College of
+                Engineering.
+                <br>
+                <br>
+                Feel free to check out my music as well! 
+                <br>
+                (pseudonym: Dough Boi)
+                <br>
+                <br>
+                Enjoy!
+            </div>
+            <a href="https://github.com/EvanCzako" target="_blank">
+                <i id="github-link" class="fa fa-github social-link"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/evan-czako/" target="_blank">
+                <i id="linkedin-link" class="fa fa-linkedin social-link"></i>
+            </a>
+            
         </div>
 
 
