--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
             </div>
             <div class="link-container">
-                <a class="link" href="https://evanczako.github.io/DoughLoops/">
+                <a class="link" href="https://evanczako.github.io/ChordFinder/">
                     <img id="chord-finder" src="ChordFinder.png" alt="Identify harmonies!">
                     <div class="link-desc">
                         A keyboard visualizer to help you put a name to any chord you play!
